src/assets/scss/app.scss
@import url('https://fonts.googleapis.com/css?family=Lato:300,700,900');

@import 'settings';
@import 'foundation-emails';

@import 'template/template';

// Global typography
// -------

h1, p {
  font-family: 'Lato', sans-serif;
  font-weight: 300;
}
h1, h2 {
  font-weight: 900;
}

h3, h4, h5 {
  font-weight: 700;
}

// Spacing at bottom of images
// -------
.full-width-image {
  padding-bottom: 0px !important;
}

.promo-section {
  h1 {
   padding: 40px 30px 0 30px;
   color: #3f3f3f;
  }
  p {
   color: #3f3f3f;
  }
}

// Feature article
// -------
.feature-article {
  h4, h5 {
    padding-top: 20px;
  }
}

// BUTTONS
// -------


// FOOTER
// -------
.footer {
  p {
    color: $white;
  }
}

@media screen and (max-width: 596px) {
  .footer-text {
    text-align: center !important;
  }
}

table.menu th.menu-item a {
  color: #50667f;
  font-size: 13px;
}

